q/c/submissions/CODE_LOAD/error-output.txt
  File "submissions/CODE_LOAD/problem1.py", line 7
    if(k<=0):
    ^
IndentationError: unexpected indent
